# rh-acm-switchover

./: .bandit  .containerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  COMPREHENSIVE-VALIDATION-AND-ERROR-HANDLING.md  CONTAINER_IMPLEMENTATION.md  CONTAINER_QUICKREF.md  CONTRIBUTING.md  Containerfile  EXCEPTION_HANDLING_IMPROVEMENTS.md  IMPLEMENTATION_CHECKLIST.md  LICENSE  MANIFEST.in  PHASE2_COMPLETION.md  README.md  REFACTORING_PLAN.md  SECURITY.md  SECURITY_FIX_DOCUMENTATION.md  TEST_REPORT.md  TODO.md  acm_switchover.py  analyze_soak_results.sh  check_rbac.py  codex-report.md  codex.md  monitor_soak_test.sh  package-lock.json  pyproject.toml  quick-start.sh  report.md  requirements-dev.txt  requirements.txt  run_12h_soak_test.sh  run_15_switchover_test.sh  run_tests.sh  setup.cfg  show_state.py  test_fixed_script.sh
.claude/: settings.json
.claude/agents/: openshift-security-reviewer.md
.cursor/plans/: engineering-principles-compliance-review_4dfaec9b.plan.md
.github/: .gitignore  copilot-instructions.md  markdown-link-check.json
.github/prompts/: argocd_detection_and_management_ffac439e.plan.md  plan-acmSwitchoverValidation.prompt.md  plan-claudeSkillsFromRunbook.prompt.md  plan-documentationStrategy.prompt.md  plan-packagingStrategy.prompt.md  plan-packagingStrategyImplementation.prompt.md  plan-pythonE2eOrchestratorMigration.prompt.md  plan-updateAcmSwitchoverForNewRunbookV2.prompt.md
.github/workflows/: ansible-collection-foundation.yml  ci-cd.yml  container-build.yml  packaging-release.yml  pypi-publish.yml  security.yml  version-sync.yml
.kilo/: package-lock.json
artifacts/: checkpoint.json
artifacts/baseline/: mgmt1-bs.json  mgmt1-mc.json  mgmt1-restore.json  mgmt2-bs.json  mgmt2-mc.json
completions/: _acm_completion_lib.sh  acm_switchover.py  check_rbac.py  discover-hub.sh  generate-merged-kubeconfig.sh  generate-sa-kubeconfig.sh  postflight-check.sh  preflight-check.sh  show_state.py
container-bootstrap/: Containerfile  get-pip.py
deploy/acm-policies/: README.md  policy-managed-cluster-rbac.yaml  policy-rbac.yaml
deploy/kustomize/: README.md
deploy/rbac/: clusterrole.yaml  clusterrolebinding.yaml  role.yaml  rolebinding.yaml  serviceaccount.yaml
docs/: ACM_SWITCHOVER_RUNBOOK.md  ACM_SWITCHOVER_RUNBOOK_TLDR.md  ARCHITECTURE.md  CHANGELOG.md  CONTAINER_QUICKREF.md  CONTAINER_USAGE.md  CONTRIBUTING.md  DELIVERABLES.md  GITHUB_ACTIONS_SETUP.md  INSTALL.md  PRD.md  PROJECT_SUMMARY.md  QUICKREF.md  RBAC_DEPLOYMENT.md  RBAC_IMPLEMENTATION_SUMMARY.md  RBAC_REQUIREMENTS.md  README.md  TESTING.md  USAGE.md  VALIDATION_RULES.md
docs/ansible-collection/: behavior-map.md  feature-inventory.md  parity-matrix.md  scenario-catalog.md  test-migration-catalog.md
docs/deployment/: rbac-deployment.md  rbac-requirements.md
docs/development/: architecture.md  bug-resume-logic-issue.md  ci.md  e2e-test-plan.md  e2e-testing.md  engineering-principles-compliance-report.md  findings-report.md  rbac-implementation.md  release-validation-framework.md  report.md  testing.md
docs/getting-started/: container.md  install.md
docs/operations/: quickref.md  usage.md
docs/plans/: 2026-02-28-hooks-and-release-skill-design.md  2026-02-28-hooks-and-release-skill-plan.md  2026-03-08-container-build-fixes-design.md  2026-03-08-container-build-fixes.md  2026-03-28-branch-fix-detailed-analysis.md  2026-03-31-full-validation-e2e-design.md  2026-03-31-full-validation-e2e-plan.md  2026-04-04-auto-argocd-detection-design.md  2026-04-05-pre-merge-fixes.md  (+19 more)
e2e-vars/: argocd-resume.yml  argocd-test.yml  bad-kubeconfig.yml  bad-method.yml  decommission-dryrun.yml  missing-secondary.yml  rbac-bootstrap-dryrun.yml  rbac-bootstrap-real.yml  rbac-bootstrap-validator-mgmt2.yml  real-cluster-base.yml  real-cluster-full-dryrun.yml  real-cluster-full-validate.yml  real-cluster-passive-dryrun.yml  real-cluster-passive-validate.yml  real-cluster-restore-dryrun.yml  real-cluster-skip-gitops.yml  real-cluster-swapped-validate.yml  real-switchover-checkpoint.yml  real-switchover-r1.yml  real-switchover-r1r.yml  real-switchover-r2.yml  real-switchover-r2b.yml  real-switchover-r2r.yml  real-switchover-r3.yml  real-switchover-r3r.yml  real-switchover-r4.yml  real-switchover-r4r.yml  real-switchover-r5.yml  real-switchover-r5r.yml  real-switchover-r6.yml  restore-only-argocd.yml  restore-only.yml
lib/: __init__.py  _version.py  argocd.py  argocd_coordinator.py  constants.py  exceptions.py  gitops_detector.py  kube_client.py  rbac_validator.py  utils.py  validation.py  waiter.py
modules/: __init__.py  activation.py  backup_schedule.py  decommission.py  finalization.py  post_activation.py  preflight.py  preflight_coordinator.py  preflight_validators.py  primary_prep.py  restore_discovery.py  rollback.py
packaging/: README.md
plans/: 2026-01-10-pr-readiness-improvements-v1.md
scripts/: README.md  argocd-manage.sh  constants.sh  discover-hub.sh  generate-merged-kubeconfig.sh  generate-sa-kubeconfig.sh  install-completions.sh  lib-common.sh  postflight-check.sh  preflight-check.sh  setup-rbac.sh
tests/: README-scripts-tests.md  README.md  README.old.md  __init__.py  test_activation.py  test_argocd.py  test_argocd_constants_parity.py  test_argocd_coordinator.py  test_argocd_manage_script.py  test_auto_import.py  test_backup_schedule.py  test_check_rbac.py  test_ci_guardrails.py  test_cli_auto_import.py  test_completions.py  test_constants_parity.py  test_decommission.py  test_dependency_security_constraints.py  test_documentation_guardrails.py  test_exceptions.py  test_finalization.py  test_generate_merged_kubeconfig_script.py  test_gitops_detector.py  test_kube_client.py  test_lib_common.sh  test_main.py  test_oc_backward_compatibility.sh  test_oc_direct.sh  test_oc_sanitization.sh  test_post_activation.py  test_preflight.py  test_preflight_backward_compat.py  test_preflight_coordinator.py  test_preflight_modular.py  test_preflight_validators_unit.py  test_primary_prep.py  test_rbac_collection_parity.py  test_rbac_integration.py  test_rbac_validator.py  test_reliability.py  (+10 more)
(+376 files in other folders)
