[metadata]
name = acm-switchover
version = 1.3.0
description = Automated ACM Hub Switchover Tool
author = Platform Engineering
license = MIT

[options]
python_requires = >=3.9

[flake8]
max-line-length = 120
exclude = 
    .git,
    __pycache__,
    .venv,
    venv,
    build,
    dist,
    completions,
    .eggs
# Ignored error codes:
# E203 - whitespace before ':'
# E501 - line too long (handled by black)
# W503 - line break before binary operator
ignore = E203,E501,W503
max-complexity = 15

[pylint]
max-line-length = 120
disable = 
    C0103,  # invalid-name
    C0114,  # missing-module-docstring
    C0115,  # missing-class-docstring
    C0116,  # missing-function-docstring
    R0913,  # too-many-arguments
    R0914,  # too-many-locals

[mypy]
python_version = 3.9
ignore_missing_imports = True
warn_return_any = False
warn_unused_configs = True
disallow_untyped_defs = False
check_untyped_defs = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
markers =
    integration: Integration tests with mocked binaries
    unit: Unit tests for individual components
    slow: Slower running tests
addopts = 
    -v
    --strict-markers
# Coverage disabled by default for faster test runs
# Run with: pytest --cov=. --cov-branch --cov-report=term-missing:skip-covered
#    --cov=.
#    --cov-branch
#    --cov-report=term-missing:skip-covered
#    --cov-report=html
#    --cov-report=xml

[coverage:run]
source = .
omit = 
    */tests/*
    */test_*
    */__pycache__/*
    */venv/*
    */env/*
    */.venv/*
    setup.py
    tests/test_scripts.py
    tests/test_scripts_integration.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    @abstractmethod

[isort]
profile = black
line_length = 120
skip = .venv,venv,env,build,dist,completions

[bandit]
exclude = /tests/,/test_*.py,/completions/
skips = B101,B601
