[metadata]
name = acm-switchover
version = 1.4.11
description = Automated ACM Hub Switchover Tool
author = Platform Engineering
license = MIT

[options]
python_requires = >=3.9

[flake8]
max-line-length = 120
exclude = 
    .git,
    __pycache__,
    .venv,
    venv,
    build,
    dist,
    completions,
    .eggs
# Ignored error codes:
# E203 - whitespace before ':'
# E501 - line too long (handled by black)
# W503 - line break before binary operator
ignore = E203,E501,W503
max-complexity = 15

[pylint]
max-line-length = 120
disable = 
    C0103,  # invalid-name
    C0114,  # missing-module-docstring
    C0115,  # missing-class-docstring
    C0116,  # missing-function-docstring
    C0301,  # line-too-long (handled by black)
    C0302,  # too-many-lines
    C0415,  # import-outside-toplevel
    R0913,  # too-many-arguments
    R0914,  # too-many-locals
    R0911,  # too-many-return-statements
    R0912,  # too-many-branches
    R0915,  # too-many-statements
    R0917,  # too-many-positional-arguments
    R0902,  # too-many-instance-attributes
    R0903,  # too-few-public-methods
    R0904,  # too-many-public-methods
    R1702,  # too-many-nested-blocks
    R1705,  # no-else-return
    R1720,  # no-else-raise
    R0401,  # cyclic-import
    R0801,  # duplicate-code
    W0612,  # unused-variable
    W0613,  # unused-argument
    W0718,  # broad-exception-caught
    W1201,  # logging-not-lazy
    W1203,  # logging-fstring-interpolation
    W1404,  # implicit-str-concat
    W1514,  # unspecified-encoding

[mypy]
python_version = 3.9
ignore_missing_imports = True
warn_return_any = False
warn_unused_configs = True
disallow_untyped_defs = False
check_untyped_defs = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
markers =
    integration: Integration tests with mocked binaries
    unit: Unit tests for individual components
    slow: Slower running tests
    e2e: End-to-end tests
    e2e_dry_run: E2E dry-run tests
addopts = 
    -v
    --strict-markers
# Coverage disabled by default for faster test runs
# Run with: pytest --cov=. --cov-branch --cov-report=term-missing:skip-covered
#    --cov=.
#    --cov-branch
#    --cov-report=term-missing:skip-covered
#    --cov-report=html
#    --cov-report=xml

[coverage:run]
source = .
omit = 
    */tests/*
    */test_*
    */__pycache__/*
    */venv/*
    */env/*
    */.venv/*
    setup.py
    tests/test_scripts.py
    tests/test_scripts_integration.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    @abstractmethod

[isort]
profile = black
line_length = 120
skip = .venv,venv,env,build,dist,completions

[bandit]
exclude = /tests/,/test_*.py,/completions/
skips = B101,B601
